--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="img/Profile05.jpg" alt="Perfil de Ruth Jimenez, LavaDuplex">
         <div class="aside-info">
             <h4>Ruth Jimenez</h4>
-            <h5>Administradora & Contadora - LavaDuplex</h5>
+            <h5>Administradora - LavaDuplex</h5>
             <span>Disponible</span>
         </div>
     </aside>
